<resources>
    <string name="app_name">MealChain</string>
    <string name="onboard1"> Your ultimate companion for managing your meals and tracking your exercise routines.</string>
    <string name="Previous">Previous</string>
    <string name="Skip">Skip</string>
    <string name="Meal">Meal</string>
    <string name="Water">Water</string>
    <string name="Activity">Activity</string>
    <string name="Help">Help &amp; Tips</string>
    <string name="GetStarted">Get Started</string>
    <string name="BreakFast">BreakFast</string>
    <string name="Lunch">Lunch</string>
    <string name="Night">Night</string>
    <string name="Analyze">Analyze Today Calorize</string>
    <string name="Favourite">Add Your Favourite Meal</string>
    <string name="Goal">Update Calory Goal</string>
    <string name="Goal1">1000 Calory +</string>
    <string name="Goal2">Calory Goal 250/1000</string>
    <string name="AddWater">Add Water Level</string>
    <string name="Level">Water Level</string>
    <string name="WaterLevel">2.0 L +</string>
    <string name="now">1.5 L / 2.0 L</string>
    <string name="Plus">+</string>
    <string name="ml125">125 ml</string>
    <string name="ml150">150 ml</string>
    <string name="ml175">175 ml</string>
    <string name="ml200">200 ml</string>
    <string name="L1">1000 ml</string>
    <string name="Watch">Apple Watch Series 7</string>
    <string name="Connected">Connected</string>
    <string name="Consume">Consume</string>
    <string name="Duration">Exercise Duration</string>
    <string name="Mins">0/30 min</string>
    <string name="Freq">Exercise Frequency</string>
    <string name="Frqmin">0/3 min/Day</string>
    <string name="Today">Today</string>
    <string name="Step">0/10000 steps</string>
    <string name="Rate">80 times/minute</string>
    <string name="Heart">Heart Rate</string>
    <string name="Goal3">250/1000 Kcal</string>
    <string name="Sleep">Sleep Duration</string>
    <string name="Time">6 hours 30 minutes</string>
    <string name="Blood">Blood Glucose</string>
    <string name="GluLevel">8.1 mmol/L</string>
    <string name="Nutrition">Nutrition Information</string>
    <string name="Date">16/08/2024</string>
    <string name="DateTime">9:26 AM</string>
    <string name="Protien">Protien</string>
    <string name="Carbohydrate">Carbohydrate</string>
    <string name="Fat">Fat</string>
    <string name="Vitamins">Vitamins</string>
    <string name="Dinner">Dinner</string>
    <string name="Name">Name</string>
    <string name="PName">Akila Manujith</string>
    <string name="Gender">Gender</string>
    <string name="Birthday">Birthday</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>
    <string name="Sport">Sport Goal</string>
    <string name="activities">No Of Activities</string>
    <string name="Male">Male</string>
    <string name="bday">17.12.2000</string>
    <string name="Pweight">57 Kgs</string>
    <string name="Pheight">150 cm</string>
    <string name="Psteps">10000 steps</string>
    <string name="Pmins">30 min/Day</string>
    <string name="Pact">12 Times/Day</string>
    <string name="Login">If you already have an Account.</string>
    <string name="LoginButton">LogIn</string>
    <string name="Sign">Sign Up</string>

    <string-array name="dropdown_items">
        <item>1 L</item>
        <item>2 L</item>
        <item>3 L</item>
        <item>4 L</item>
        <item>5 L</item>
        <item>6 L</item>
    </string-array>

</resources>